fix: comments on tablet and mobile

--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -165,7 +165,7 @@
 }
 
 
-@media screen and (max-width: 767.98px) {
+@media screen and (max-width: 567px) {
   .footer {
     padding: 4rem 0 0.5rem 0;
     hr {
