--- a/src/components/common/Item/Item.module.scss
+++ b/src/components/common/Item/Item.module.scss
@@ -68,13 +68,22 @@
 
 @media screen and (max-width: 567px) {
   .panelItem {
+    p {
+      font-size:   1rem;
+      line-height: 1.5625;
+    }
+  }
+}
+
+@media screen and (max-width: 567px) {
+  .panelItem {
     flex-direction: column;
     padding:        1.875rem;
     .panelItemImage {
-      width:         100%;
+      width:         13.75rem;
+      margin-right:  auto;
       height:        7.625rem;
       margin-bottom: 1.25rem;
-      margin-right:  0;
       &:before {
         width:  5rem;
         height: 5rem;
@@ -82,6 +91,10 @@
     }
     > div {
       max-width: 100%;
+    }
+    p {
+      font-size:   0.875rem;
+      line-height: 1.57;
     }
     &.panelItemMod {
       padding:     1.875rem 3.5rem 2.5rem 1.875rem;
