--- a/src/components/common/Plan/Plan.module.scss
+++ b/src/components/common/Plan/Plan.module.scss
@@ -143,7 +143,7 @@ ul.checked {
     }
   }
   .pricingItemWrapper {
-    justify-content: center;
+    justify-content: space-around;
   }
 
   .pricingItem {
