--- a/src/components/pages/Products/components/Panel/Panel.module.scss
+++ b/src/components/pages/Products/components/Panel/Panel.module.scss
@@ -71,6 +71,17 @@
 @media screen and (max-width: 992px) {
   .panel {
     padding-left: 0;
+    .fundraisingLink {
+      p {
+        font-size:   0.9375rem;
+        line-height: 1.67;
+      }
+    }
+    .fundraisingInfo {
+      > p {
+        font-size:   1rem;
+        line-height: 1.5625;
+      }
   }
 }
 
@@ -84,8 +95,14 @@
         max-width: 100%;
       }
       p {
-        max-width: 100%;
+        max-width:   100%;
+        font-size:   0.875rem;
+        line-height: 1.42;
       }
+      .link {
+        margin-left: 0;
+      }
+    }
     }
   }
 }
